# ktor-impersonate

./: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
gradle/: libs.versions.toml
rust/: Cargo.toml
rust/src/: exception.rs  jni_cache.rs  lib.rs  methods.rs  requests.rs  root_certs.rs
rust/src/jni/: cache.rs  client.rs  config.rs  exception.rs  headers.rs  methods.rs  mod.rs  source.rs  utils.rs
shared/: build.gradle.kts
shared/src/androidInstrumentedTest/: AndroidManifest.xml
shared/src/androidInstrumentedTest/kotlin/dev/rushii/ktor_impersonate/: EngineTests.kt
shared/src/androidMain/kotlin/dev/rushii/ktor_impersonate/: Native.android.kt  Platform.android.kt
shared/src/androidMain/kotlin/dev/rushii/ktor_impersonate/internal/: Native.android.kt
shared/src/androidUnitTest/kotlin/dev/rushii/ktor_impersonate/: Test.android.kt
shared/src/commonMain/kotlin/dev/rushii/ktor_impersonate/: Greeting.kt  Impersonate.kt  ImpersonateConfig.kt  ImpersonateEngine.kt  ImpersonatePreset.kt  Native.kt  Platform.kt  RquestException.kt
shared/src/commonMain/kotlin/dev/rushii/ktor_impersonate/internal/: Native.kt  NativeEngine.kt  ResponseSource.kt  SourceByteReadChannel.kt
shared/src/commonTest/kotlin/dev/rushii/ktor_impersonate/: Test.kt
shared/src/iosMain/kotlin/dev/rushii/ktor_impersonate/: Native.ios.kt  Platform.ios.kt
shared/src/iosMain/kotlin/dev/rushii/ktor_impersonate/internal/: Native.ios.kt
shared/src/iosTest/kotlin/dev/rushii/ktor_impersonate/: Test.ios.kt
