[package]
name = "ktor-impersonate"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
name = "ktorimpersonate"
crate-type = ["cdylib"]

[dependencies]
catch_panic = { git = "https://github.com/sorz/catch_panic.git", rev = "92d4158" } # https://github.com/HermitSocialClub/catch_panic/pull/2
dashmap = "6.1.0"
jni = "0.21.1"
jni_fn = "0.1.2"
log = "0.4.22"
paste = "1.0.15"
rand = "0.8.5"
rquest = { version = "0.21.11", features = ["boring-tls", "websocket"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "android")'.dependencies]
android_log = "0.1.3"
