[package]
name = "ktor-impersonate"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
name = "ktorimpersonate"
crate-type = ["cdylib"]

# Optimize for size
[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
bytes = "1.7.2"
#catch_panic = { git = "https://github.com/sorz/catch_panic.git", rev = "92d4158" } # https://github.com/HermitSocialClub/catch_panic/pull/2
catch_panic = { git = "https://github.com/rushiiMachine/catch_panic.git", rev = "7ce5a28" } # https://github.com/sorz/catch_panic/pull/1
dashmap = "6.1.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
jni = "0.21.1"
jni_fn = "0.1.2"
log = "0.4.22"
log-panics = "2.1.0"
paste = "1.0.15"
rand = "0.8.5"
rquest = { version = "0.23.0", default-features = false, features = ["boring-tls", "stream", "websocket"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "time", "sync"] }

# Android only
[target.'cfg(target_os = "android")'.dependencies]
android_log = "0.1.3"

# iOS only
[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"
webpki-root-certs = "0.26.6"

# macOS only
[target.'cfg(target_os = "macos")'.dependencies]
oslog = "0.2.0"

# Not Android, iOS
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
rustls-native-certs = "0.8.0" # Supports Windows, macOS, *nix

# Not Android, iOS, macOS
[target.'cfg(not(any(target_os = "android", target_os = "ios", target_os = "macos")))'.dependencies]
env_logger = "0.11.5"
